Domain objects changes and overall improves on aplication layer
